--- a/redpanda/broker.cnf
+++ b/redpanda/broker.cnf
@@ -1,11 +1,3 @@
-[ ca ]
-default_ca = CA_default
-
-[ CA_default ]
-default_days    = 365
-default_md      = sha256
-unique_subject  = no
-
 [ req ]
 prompt = no
 distinguished_name = distinguished_name
@@ -13,11 +5,10 @@ req_extensions     = extensions
 
 [ distinguished_name ]
 organizationName = Redpanda
-commonName       = Redpanda CA
 
 [ extensions ]
-keyUsage         = critical,digitalSignature,nonRepudiation,keyEncipherment,keyCertSign
-basicConstraints = critical,CA:true,pathlen:1
+keyUsage         = critical,digitalSignature,keyEncipherment
+extendedKeyUsage = serverAuth,clientAuth
 subjectAltName   = @alt_names
 
 [ alt_names ]
