--- a/redpanda/docker-compose.yml
+++ b/redpanda/docker-compose.yml
@@ -11,7 +11,7 @@ networks:
 
 secrets:
   broker_key:
-    external: true
+    file: ./broker.key
 
 services:
   redpanda-0:
@@ -147,8 +147,5 @@ services:
       - 8080:8080
     depends_on:
       - redpanda-0
-    secrets:
-      - broker_key
     volumes:
-      - "./broker.crt:/tls/broker.crt:ro"
       - "./ca.crt:/tls/ca.crt:ro"
