--- a/beam/pom.xml
+++ b/beam/pom.xml
@@ -104,6 +104,14 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <version>${maven-jar-plugin.version}</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <mainClass>com.redpanda.doom.DoomPipeline</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
       </plugin>
 
       <!--
