pull out a single node config, add bootstrap script

--- a/redpanda/docker-compose.yml
+++ b/redpanda/docker-compose.yml
@@ -15,7 +15,7 @@ secrets:
 
 services:
   redpanda-0:
-    entrypoint: /pre-entry.sh
+    # entrypoint: /pre-entry.sh
     command:
       - redpanda
       - start
@@ -29,12 +29,12 @@ services:
       - --smp 1
       - --memory 1G
       - --default-log-level=info
-    image: docker.redpanda.com/redpandadata/redpanda:v23.1.8
+    image: docker.redpanda.com/redpandadata/redpanda:v23.1.9
     container_name: redpanda-0
     volumes:
       - type: tmpfs
         target: /var/lib/redpanda/data
-      - "./pre-entry.sh:/pre-entry.sh:ro"
+      #- "./pre-entry.sh:/pre-entry.sh:ro"
       - "./broker.crt:/tls/broker.crt:ro"
       - "./ca.crt:/tls/ca.crt:ro"
       - "./redpanda.yaml:/tmp/redpanda.yaml:ro"
@@ -45,82 +45,6 @@ services:
       - 18082:18082
       - 19092:19092
       - 19644:9644
-    secrets:
-      - broker_key
-
-  redpanda-1:
-    entrypoint: /pre-entry.sh
-    command:
-      - redpanda
-      - start
-      - --kafka-addr internal://0.0.0.0:9092,external://0.0.0.0:29092
-      - --advertise-kafka-addr internal://redpanda-0:9092,external://localhost:29092
-      - --pandaproxy-addr internal://0.0.0.0:8082,external://0.0.0.0:28082
-      - --advertise-pandaproxy-addr internal://redpanda-0:8082,external://localhost:28082
-      - --schema-registry-addr internal://0.0.0.0:8081,external://0.0.0.0:28081
-      - --rpc-addr redpanda-1:33145
-      - --advertise-rpc-addr redpanda-1:33145
-      - --smp 1
-      - --memory 1G
-      - --mode dev-container
-      - --default-log-level=info
-      - --seeds redpanda-0:33145
-    image: docker.redpanda.com/redpandadata/redpanda:v23.1.8
-    container_name: redpanda-1
-    volumes:
-      - type: tmpfs
-        target: /var/lib/redpanda/data
-      - "./pre-entry.sh:/pre-entry.sh:ro"
-      - "./broker.crt:/tls/broker.crt:ro"
-      - "./ca.crt:/tls/ca.crt:ro"
-      - "./redpanda.yaml:/tmp/redpanda.yaml:ro"
-    networks:
-      - redpanda_network
-    ports:
-      - 28081:28081
-      - 28082:28082
-      - 29092:29092
-      - 29644:9644
-    depends_on:
-      - redpanda-0
-    secrets:
-      - broker_key
-
-  redpanda-2:
-    entrypoint: /pre-entry.sh
-    command:
-      - redpanda
-      - start
-      - --kafka-addr internal://0.0.0.0:9092,external://0.0.0.0:39092
-      - --advertise-kafka-addr internal://redpanda-2:9092,external://localhost:39092
-      - --pandaproxy-addr internal://0.0.0.0:8082,external://0.0.0.0:38082
-      - --advertise-pandaproxy-addr internal://redpanda-2:8082,external://localhost:38082
-      - --schema-registry-addr internal://0.0.0.0:8081,external://0.0.0.0:38081
-      - --rpc-addr redpanda-2:33145
-      - --advertise-rpc-addr redpanda-2:33145
-      - --smp 1
-      - --memory 1G
-      - --mode dev-container
-      - --default-log-level=info
-      - --seeds redpanda-0:33145
-    image: docker.redpanda.com/redpandadata/redpanda:v23.1.8
-    container_name: redpanda-2
-    volumes:
-      - type: tmpfs
-        target: /var/lib/redpanda/data
-      - "./pre-entry.sh:/pre-entry.sh:ro"
-      - "./broker.crt:/tls/broker.crt:ro"
-      - "./ca.crt:/tls/ca.crt:ro"
-      - "./redpanda.yaml:/tmp/redpanda.yaml:ro"
-    networks:
-      - redpanda_network
-    ports:
-      - 38081:38081
-      - 38082:38082
-      - 39092:39092
-      - 39644:9644
-    depends_on:
-      - redpanda-0
     secrets:
       - broker_key
 
@@ -136,9 +60,15 @@ services:
       CONSOLE_CONFIG_FILE: |
         kafka:
           brokers: ["redpanda-0:9092"]
+          clientId: console
           schemaRegistry:
             enabled: true
             urls: ["http://redpanda-0:8081"]
+          sasl:
+            enabled: true
+            username: admin
+            password: password
+            mechanism: SCRAM-SHA-256
         redpanda:
           adminApi:
             enabled: true
