--- a/beam/pom.xml
+++ b/beam/pom.xml
@@ -27,7 +27,7 @@
   <packaging>jar</packaging>
 
   <properties>
-    <beam.version>2.46.0</beam.version>
+    <beam.version>2.47.0</beam.version>
 
     <guava.version>31.1-jre</guava.version>
     <hamcrest.version>2.1</hamcrest.version>
@@ -35,11 +35,11 @@
     <kafka.version>2.4.1</kafka.version>
     <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
     <maven-exec-plugin.version>1.6.0</maven-exec-plugin.version>
-    <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
-    <maven-shade-plugin.version>3.1.0</maven-shade-plugin.version>
+    <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
+    <maven-shade-plugin.version>3.2.0</maven-shade-plugin.version>
     <mockito.version>3.7.7</mockito.version>
-    <slf4j.version>1.7.30</slf4j.version>
-    <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
+    <slf4j.version>1.7.34</slf4j.version>
+    <maven-surefire-plugin.version>3.1.0</maven-surefire-plugin.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
