simple event-time stream working in pyflink

--- a/pyflink/config.ini
+++ b/pyflink/config.ini
@@ -1,12 +1,12 @@
 [source]
 topics = doom
 schema_path = doom-simple.schema.json
-bootstrap_servers = BROKERS!
+bootstrap_servers = redpanda-0:9092
 group_id = doom-consumers
-security_protocol = SASL_SSL
+security_protocol = SASL_PLAINTEXT
 sasl_mechanism = SCRAM-SHA-256
 username = doom
-password = PASSWORD!
+password = doom
 kafka_jar = file:///work/flink-sql-connector-kafka-3.0.0.jar
 
 [sink]
