--- a/beam/pom.xml
+++ b/beam/pom.xml
@@ -213,6 +213,12 @@
       <version>${kafka.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.beam</groupId>
+      <artifactId>beam-runners-flink-1.14</artifactId>
+      <version>${beam.version}</version>
+    </dependency>
+
     <!-- Add slf4j API frontend binding with JUL backend -->
     <dependency>
       <groupId>org.slf4j</groupId>
