--- a/flink/build.gradle
+++ b/flink/build.gradle
@@ -76,7 +76,8 @@ dependencies {
     runtimeOnly "org.apache.logging.log4j:log4j-core:${log4jVersion}"
 
     // Add test dependencies here.
-    // testCompile "junit:junit:4.12"
+    testImplementation(platform('org.junit:junit-bom:5.9.3'))
+    testImplementation('org.junit.jupiter:junit-jupiter')
 }
 
 // make compileOnly dependencies available for tests:
@@ -101,4 +102,11 @@ jar {
 
 shadowJar {
     configurations = [project.configurations.flinkShadowJar]
+}
+
+test {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
