--- a/redpanda/docker-compose.yml
+++ b/redpanda/docker-compose.yml
@@ -19,16 +19,16 @@ services:
       - redpanda
       - start
       - --kafka-addr internal://0.0.0.0:9092,external://0.0.0.0:19092
-      - --advertise-kafka-addr internal://redpanda-0:9092,external://localhost:19092
+      - --advertise-kafka-addr internal://redpanda-0:9092,external://fedora:19092
       - --pandaproxy-addr internal://0.0.0.0:8082,external://0.0.0.0:18082
-      - --advertise-pandaproxy-addr internal://redpanda-0:8082,external://localhost:18082
+      - --advertise-pandaproxy-addr internal://redpanda-0:8082,external://fedora:18082
       - --schema-registry-addr internal://0.0.0.0:8081,external://0.0.0.0:18081
       - --rpc-addr redpanda-0:33145
       - --advertise-rpc-addr redpanda-0:33145
-      - --smp 4
+      - --smp 2
       - --memory 4G
       - --default-log-level=info
-    image: docker.redpanda.com/redpandadata/redpanda:v23.1.10
+    image: docker.redpanda.com/redpandadata/redpanda:v23.1.11
     container_name: redpanda-0
     volumes:
       - type: tmpfs
@@ -45,7 +45,7 @@ services:
 
   flink-jobmanager:
     command: jobmanager
-    image: flink:1.17
+    image: docker.io/library/flink:1.17
     networks:
       - redpanda_network
     ports:
@@ -57,7 +57,7 @@ services:
 
   flink-taskmanager-0:
     command: taskmanager
-    image: flink:1.17
+    image: docker.io/library/flink:1.17
     networks:
       - redpanda_network
     depends_on:
